simplified the product list into one component

--- a/src/app/backorders/product-list/product-list.component.html
+++ b/src/app/backorders/product-list/product-list.component.html
@@ -1,3 +1,34 @@
 
-<app-product-group *ngFor="let g of data.productGroups" [group]="g"></app-product-group>
+<ng-container *ngFor="let g of productGroups">
+  <h2>{{g.customerType}} Backorders: {{g.category}}</h2>
+  <table class="table-sm table-hover">
+    <thead>
+    <tr>
+      <th>#</th>
+      <th>Product</th>
+      <th>Oldest</th>
+      <th>Quantity</th>
+      <th>Dollar Value</th>
+    </tr>
+    </thead>
+    <tbody>
+    <ng-container *ngFor="let p of g.products; index as i">
+      <tr (click)="toggle(p.product)">
+        <td>{{i+1}}</td>
+        <td>{{p.sku}}</td>
+        <td>{{p.oldest|date:'M/d/yyyy'}}</td>
+        <td>{{p.quantity}}</td>
+        <td>{{p.amount|currency:'USD':'symbol':'1.0-0'}}</td>
+      </tr>
+      <tr *ngFor="let o of p.orders">
+        <td>-</td>
+        <td>{{o.sku}}</td>
+        <td>{{o.planned_date}}</td>
+        <td>{{o.quantity}}</td>
+        <td>{{o.amount}}</td>
+      </tr>
+    </ng-container>
+    </tbody>
+  </table>
+</ng-container>
 
